Fixed reference to home

--- a/app/views/pages/home2.html
+++ b/app/views/pages/home2.html
@@ -28,7 +28,7 @@
 
         De Vluchtelingen hebben jullie hulp hard nodig. Schrijf je in en doe mee. </p>
 
-        <button>Volunteer nu als vriend</button>
+        <button>Volunteer nu als <vriend></vriend></button>
     </div>
     <footer></footer>
 </body>
