--- a/app/views/pages/home.twig
+++ b/app/views/pages/home.twig
@@ -2,24 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Homepage</title>
+    <title>{{ title }}</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav>
-        <div class="logo"></div>
-        <div class="registration">
-            <ul>
-                <li>Sign In</li>
-                <li>Log In</li>
-            </ul>
-        </div>
-    </nav>
-    <div class="jumbo">
-        <h1>Volunteer Matching</h1>
+<nav>
+    <div class="logo"></div>
+    <div class="registration">
+        <ul>
+            <li>Sign In</li>
+            <li>Log In</li>
+        </ul>
     </div>
+</nav>
+<div class="jumbo">
+    <h1>Volunteer Matching</h1>
+</div>
 
-    <div class="body">
-        <p>
+<div class="body">
+    <?php
+        echo $body;
+        ?>
+    <p>
         Wij van Volenteer Matching hebben één doel:
         Wij matchen Vluchtelingen met Vrijwliigers in jouw Buurt.
 
@@ -28,8 +33,8 @@
 
         De Vluchtelingen hebben jullie hulp hard nodig. Schrijf je in en doe mee. </p>
 
-        <button>Volunteer nu als <vriend></vriend></button>
-    </div>
-    <footer></footer>
+    <button>Volunteer nu als vriend </button>
+</div>
+<footer></footer>
 </body>
 </html>
