--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,12 @@
 .body{
     border: 1px solid red;
 }
+
+.page-title{
+    width:200px;
+    margin:0 auto;
+}
+
+div.content{
+    border:1px solid red;
+}
